--- a/UniversityFacultativesSystem/UniversityFacultativesDAL/UniversityFacultativesDAL.csproj
+++ b/UniversityFacultativesSystem/UniversityFacultativesDAL/UniversityFacultativesDAL.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Entity\UserLogin.cs" />
     <Compile Include="Entity\Semester.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\StudentsRepository.cs" />
     <Compile Include="Repository\TeachersRepository.cs" />
     <Compile Include="Service\DeaneryService.cs" />
   </ItemGroup>
