--- a/UniversityFacultativesSystem/UniversityFacultativesSystem/UniversityFacultativesSystem.csproj
+++ b/UniversityFacultativesSystem/UniversityFacultativesSystem/UniversityFacultativesSystem.csproj
@@ -49,6 +49,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeaneryForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DeaneryForm.Designer.cs">
+      <DependentUpon>DeaneryForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -58,6 +70,12 @@
     <Compile Include="FormExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DeaneryForm.resx">
+      <DependentUpon>DeaneryForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -89,6 +107,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\education_computer_school_graduate_cap_monitor_icon_149680.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UniversityFacultativesDAL\UniversityFacultativesDAL.csproj">
+      <Project>{cb37685f-9f91-4f04-9bba-d9defd8fe439}</Project>
+      <Name>UniversityFacultativesDAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
