--- a/UniversityFacultativesSystem/UniversityFacultativesSystem/UniversityFacultativesSystem.csproj
+++ b/UniversityFacultativesSystem/UniversityFacultativesSystem/UniversityFacultativesSystem.csproj
@@ -49,46 +49,40 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DeaneryForm.cs">
+    <Compile Include="Forms\DeaneryForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="DeaneryForm.Designer.cs">
+    <Compile Include="Forms\DeaneryForm.Designer.cs">
       <DependentUpon>DeaneryForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LoginForm.cs">
+    <Compile Include="Forms\LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="LoginForm.Designer.cs">
+    <Compile Include="Forms\LoginForm.Designer.cs">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="StartForm.cs">
+    <Compile Include="Forms\StartForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StartForm.Designer.cs">
+    <Compile Include="Forms\StartForm.Designer.cs">
       <DependentUpon>StartForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormExtensions.cs" />
+    <Compile Include="Forms\FormExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StudentForm.cs">
+    <Compile Include="Forms\TeacherForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="StudentForm.Designer.cs">
-      <DependentUpon>StudentForm.cs</DependentUpon>
-    </Compile>
-    <Compile Include="TeacherForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TeacherForm.Designer.cs">
+    <Compile Include="Forms\TeacherForm.Designer.cs">
       <DependentUpon>TeacherForm.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="DeaneryForm.resx">
+    <EmbeddedResource Include="Forms\DeaneryForm.resx">
       <DependentUpon>DeaneryForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="LoginForm.resx">
+    <EmbeddedResource Include="Forms\LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="StartForm.resx">
+    <EmbeddedResource Include="Forms\StartForm.resx">
       <DependentUpon>StartForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -101,7 +95,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="TeacherForm.resx">
+    <EmbeddedResource Include="Forms\TeacherForm.resx">
       <DependentUpon>TeacherForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
